2004-08-15  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* lib/ws2_32/include/.cvsignore: New file.
	* lib/ws2_32/makefile (TARGET_PCH): Set to include/ws2_32.h.
	* lib/ws2_32/include/[catalog.h, handle.h]: Don't include ws2_32.h.

2004-08-15  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* lib/gdi32/include/.cvsignore: New file.
	* lib/gdi32/.cvsignore: Remove *.gch.

2004-08-15  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* lib/gdi32/.cvsignore: Ignore *.gch.
	* lib/gdi32/include/precomp.h: New file.
	* lib/gdi32/Makefile (TARGET_PCH): Set to include/precomp.h.
	* lib/gdi32/*/*.c: Use pre-compiled header.

2004-08-15  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* lib/msvcrt/.cvsignore: Ignore *.gch.
	* lib/msvcrt/precomp.h: New file.
	* lib/msvcrt/Makefile (TARGET_PCH): Set to precomp.h.
	* lib/msvcrt/*/*.c: Use pre-compiled header.

2004-08-15  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* lib/crtdll/.cvsignore: Ignore *.gch.
	* lib/crtdll/precomp.h: New file.
	* lib/crtdll/Makefile (TARGET_PCH): Set to precomp.h.
	* lib/crtdll/*/*.c: Use pre-compiled header.

2004-08-15  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* lib/advapi32/.cvsignore: Ignore *.gch.
	* lib/advapi32/advapi32.h: New file.
	* lib/advapi32/Makefile (TARGET_PCH): Set to advapi32.h.
	* lib/advapi32/*/*.c: Use pre-compiled header.

2004-08-15  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* ntoskrnl/include/.cvsignore: New file.
	* ntoskrnl/include/ntoskrnl.h: Ditto.
	* ntoskrnl/*/*.c: Use pre-compiled header.
	* ntoskrnl/Makefile: Support pre-compiled header.
	* tools/helper.mk: .pch files are now .gch files.

2004-07-24  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* Makefile (DLLS): Add gdiplus.
	* apistatus.lst: Add gdiplus.dll.
	* baseaddress.cfg (TARGET_BASE_LIB_GDIPLUS): Declare.
	* bootdata/packages/reactos.dff: Add gdiplus.dll.
	* include/ntos/rtl.h (InsertTailList): Remove dependency on RtlAssert.